--- a/src/background.html
+++ b/src/background.html
@@ -1,5 +1,7 @@
 <html>
-	<head>
-		<script type="text/javascript" src="background.js"></script>
-	</head>
+  <body>
+    <script type="text/javascript" src="js/background.js"></script>
+  </body>
 </html>
+
+<!-- vim: se sw=2 ts=2 sta et: -->
