--- a/src/background.html
+++ b/src/background.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <script type="text/javascript" src="js/background.js"></script>
+    <script src="js/background.js"></script>
   </body>
 </html>
 
