--- a/src/options.html
+++ b/src/options.html
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="js/options.js"></script>
+    <script src="js/options.js"></script>
   </body>
 </html>
 
